<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/colorAccentDark"
        android:text="@string/msg_failed_audio"/>
    <ImageButton
        android:id="@+id/button_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow"
        android:layout_centerHorizontal="true"
        android:background="@color/colorTransparent"
        android:layout_below="@id/text_error"
        android:contentDescription="@string/content_description" />
    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_play_pause"
        style="@style/SeekbarStyle.Red"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_exit"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp"
        android:layout_below="@id/seek_bar"
        style="@style/Permissions.Button"
        android:text="@string/msg_exit"/>
</RelativeLayout>